# SYCL-Examples

./: .gitignore  CMakeLists.txt  README.md
src/: debugging.cpp  error_handling.cpp  hello_world.cpp  lambdas.cpp  memory1.cpp  memory2.cpp  memory3.cpp  reduction.cpp
